Update to read from options correctly (Cells incompat)

--- a/app/cells/checkbox_control/render_edit_list.html.erb
+++ b/app/cells/checkbox_control/render_edit_list.html.erb
@@ -1,4 +1,4 @@
-<% @opts[:list].each do |entry| %>
+<% @list.each do |entry| %>
 <%   if entry.is_a?(Hash) %>
 <label>
 <% if @form_response.item_value(@item).nil? %>
